@@ -1,3 +1,4 @@
+12/3/13 use saturated blue (as shown in design doc) for 'H2O' background in 'Molecule count' and graph indicator
 12/3/13 use water color as the 'diluted' color for all solutions, as shown in the design doc
 12/3/13 change colors of milk and spit, as shown in the design doc
 12/3/13 when a diluted solution reads '7.00' on the pH meter, use water color
